migdb.qvto/transforms/tests/validator_app/test_err_invalid_05_required.qvto
import builder_errors;

modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";
transformation test_err_invalid_05_required(out outModel : ERR);


main() {
	var errorMessage : String := "Structure contains Non-root class \"Teacher\" containing id " + 
	"property \"idTeacher\".";
	var error : Error := _validationError(errorMessage, "validator_app.qvto"); 
	_errorLog(OrderedSet{error});	 
}